--- a/css/main.css
+++ b/css/main.css
@@ -90,6 +90,9 @@ a:hover {
 .highlight {
 	color: #46FFFF
 }
+a {
+	color: #46FFFF
+}
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255, 255, 255, .3);
