--- a/css/main.css
+++ b/css/main.css
@@ -93,6 +93,10 @@ a:hover {
 a {
 	color: #46FFFF
 }
+a:active,
+a:focus {
+    outline: none;
+}
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255, 255, 255, .3);
