--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
     font-weight: 100;
 	background: #222222;
 	color: #ebebeb;
-	margin:0 auto; 
+	margin: 0 auto;
 }
 
 a {
@@ -23,4 +23,22 @@ a {
 	0% {opacity: 0; transform: translate(-50%, -40%);}
 	50% {opacity: 0; transform: translate(-50%, -47%);}
 	100% {opacity: 1; transform: translate(-50%, -50%);}
+}
+
+@media (min-width: 480px) {
+	body {
+		font-size: 1rem;
+	} 
+} 
+
+@media (min-width: 640px) {
+	body {
+		font-size: 1.2rem;
+	} 
+} 
+
+@media (min-width: 960px) {
+	body {
+		font-size: 1.5rem;
+	}
 }
