--- a/styles/content.css
+++ b/styles/content.css
@@ -8,15 +8,49 @@
 	background-size: cover;
 }
 
+.my-auto {
+	margin-top: auto;
+	margin-bottom: auto;
+}
+
 h3 {
 	font-family: 'Pacifico', cursive;
 	font-size: 3rem;
 }
 
 p {
-	font-size: 1.2rem;
+	font-size: 1.5rem;
 }
 
 .icon {
 	font-size: 2rem;
+}
+
+.btn-circle { 
+	width: 100px; 
+	height: 100px; 
+	padding: 10px 16px; 
+	border-radius: 50px; 
+	font-size: 40px; 
+	text-align: center; 
+}
+
+.btn-light {
+	background-color: #eeeeee;
+	border-color: #cccccc;
+}
+
+.btn-light:hover {
+	background-color: #cccccc;
+}
+
+@media (max-width: 575px) {
+	.btn-circle { 
+		width: 75px; 
+		height: 75px; 
+		padding: 10px 16px; 
+		border-radius: 37.5px; 
+		font-size: 30px; 
+		text-align: center; 
+	}
 }
