--- a/styles/home.css
+++ b/styles/home.css
@@ -5,12 +5,44 @@
 h1 {
 	font-family: 'Pacifico', cursive;
 	font-size: 5rem;
-	/* padding-bottom: 3rem; */
 }
 
 h2 {
 	font-size: 2.5rem;
-	/* padding-bottom: 1rem; */
+}
+
+#hello {
+	opacity: 0;
+	-webkit-animation: fade-in 2s;
+	animation: fade-in 2s;
+	-webkit-animation-delay: 1s;
+	animation-delay: 1s;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
+}
+
+#like {
+	-webkit-animation: fade-in 2s;
+	animation: fade-in 2s;
+	-webkit-animation-delay: 3s;
+	animation-delay: 3s;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
+}
+
+#love {
+	-webkit-animation: fade-in 2s;
+	animation: fade-in 2s;
+	-webkit-animation-delay: 5s;
+	animation-delay: 5s;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
 }
 
 #scroll-down {
@@ -22,20 +54,28 @@ h2 {
 	margin-left: -12px;
 	border-left: 1px solid #fff;
 	border-bottom: 1px solid #fff;
+	box-sizing: border-box;
 	-webkit-transform: rotate(-45deg);
 	transform: rotate(-45deg);
 	-webkit-animation: animate-scroll 1.5s;
 	animation: animate-scroll 1.5s;
-	box-sizing: border-box;
+	-webkit-animation-delay: 7s;
+	animation-delay: 7s;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
 }
 
 @-webkit-keyframes animate-scroll {
 	0% {
 		-webkit-transform: rotate(-45deg) translate(50px, -50px);
+		visibility: hidden;
 		opacity: 0;
 	}
 	100% {
 		-webkit-transform: rotate(-45deg) translate(0, 0);
+		visibility: visible;
 		opacity: 1;
 	}
 }
@@ -43,10 +83,12 @@ h2 {
 @keyframes animate-scroll {
 	0% {
 		transform: rotate(-45deg) translate(30px, -30px);
+		visibility: hidden;
 		opacity: 0;
 	}
 	100% {
 		transform: rotate(-45deg) translate(0, 0);
+		visibility: visible;
 		opacity: 1;
 	}
 }
