--- a/styles/main.css
+++ b/styles/main.css
@@ -11,7 +11,38 @@ html, body {
 
 body {
 	font-family: 'Lato', sans-serif;
+	background-color: rgb(12, 12, 12);
 	color: #ebebeb;
+	-webkit-animation: fade-in 1s;
+	animation: fade-in 1s;
+	-webkit-animation-delay: 1s;
+	animation-delay: 1s;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
+}
+
+@-webkit-keyframes fade-in {
+	0% {
+		visibility: hidden;
+		opacity: 0;
+	}
+	100% {
+		visibility: visible;
+		opacity: 1;
+	}
+}
+
+@keyframes fade-in {
+	0% {
+		visibility: hidden;
+		opacity: 0;
+	}
+	100% {
+		visibility: visible;
+		opacity: 1;
+	}
 }
 
 .content {
@@ -31,6 +62,14 @@ body {
 
 .navbar {
 	background: rgba(0, 0, 0, 0.6);
+	-webkit-animation: fade-in 2s;
+	animation: fade-in 2s;
+	-webkit-animation-delay: 7s;
+	animation-delay: 7s;
+	-webkit-animation-fill-mode: forwards;
+	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
 }
 
 .navbar-collapse {
