--- a/styles/home.css
+++ b/styles/home.css
@@ -45,8 +45,8 @@ h2 {
 	width: 24px;
 	height: 24px;
 	margin-left: -12px;
-	border-left: 1px solid #fff;
-	border-bottom: 1px solid #fff;
+	border-left: 1px solid #ffffff;
+	border-bottom: 1px solid #ffffff;
 	box-sizing: border-box;
 	-webkit-transform: rotate(-45deg);
 	transform: rotate(-45deg);
