--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,7 @@ body {
 
 .navbar-brand {
 	font-family: 'Pacifico', cursive;
+	color: #ebebeb !important;
 }
 
 .nav-item {
@@ -81,5 +82,5 @@ body {
 @media (max-width: 575px) {
 	html { font-size: 0.6rem !important; }
 	.navbar { font-size: 1.67rem; }
-	.navbar-brand { font-size: 1.67rem; }
+	.navbar-brand { font-size: 2.08rem; }
 }
