--- a/styles/content.css
+++ b/styles/content.css
@@ -1,19 +1,19 @@
 #experience { 
-	background-image: url("../images/experience.jpg");
+	background-image: url('../images/experience.jpg');
 	background-position: center;
   	background-repeat: no-repeat;
 	background-size: cover;
 }
 
 #about { 
-	background-image: url("../images/about.jpg");
+	background-image: url('../images/about.jpg');
 	background-position: center;
   	background-repeat: no-repeat;
 	background-size: cover;
 }
 
 #contact {
-	background-image: url("../images/contact.jpg");
+	background-image: url('../images/contact.jpg');
 	background-position: center;
   	background-repeat: no-repeat;
 	background-size: cover;
