--- a/styles/home.css
+++ b/styles/home.css
@@ -18,6 +18,8 @@ h2 {
 	animation-delay: 1s;
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
 }
 
 #like {
@@ -27,6 +29,8 @@ h2 {
 	animation-delay: 3s;
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
 }
 
 #love {
@@ -36,6 +40,8 @@ h2 {
 	animation-delay: 5s;
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
 }
 
 #scroll-down {
@@ -56,4 +62,6 @@ h2 {
 	animation-delay: 7s;
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
 }
