--- a/styles/main.css
+++ b/styles/main.css
@@ -19,6 +19,8 @@ body {
 	animation-delay: 1s;
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
 }
 
 .content {
@@ -44,6 +46,8 @@ body {
 	animation-delay: 7s;
 	-webkit-animation-fill-mode: forwards;
 	animation-fill-mode: forwards;
+	visibility: hidden;
+	opacity: 0;
 }
 
 .navbar-collapse {
