--- a/styles/animations.css
+++ b/styles/animations.css
@@ -20,11 +20,11 @@
 	}
 }
 
-@-webkit-keyframes fade-up {
+@-webkit-keyframes fade-down {
 	0% {
 		visibility: hidden;
 		opacity: 0;
-		-webkit-transform: translateY(10px);
+		-webkit-transform: translateY(-10px);
 	}
 	100% {
 		visibility: visible;
@@ -32,9 +32,9 @@
 	}
 }
 
-@keyframes fade-up {
+@keyframes fade-down {
 	0% {
-		transform: translateY(10px);
+		transform: translateY(-10px);
 		visibility: hidden;
 		opacity: 0;
 	}
